Fix overlap between title and body

--- a/src/layouts/Page/Page.module.css
+++ b/src/layouts/Page/Page.module.css
@@ -44,7 +44,7 @@
   max-width: 1200px;
   width: 100%;
   text-align: justify;
-  padding: 130px 100px;
+  padding: 8vw 100px;
   box-sizing: border-box;
 }
 
